--- a/style.css
+++ b/style.css
@@ -7,50 +7,58 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
 body {
   /* background:url(desktop-wallpaper-mental-health-awareness-background-health-health-fitness-and-natural-health-mental-illness.jpg)no-repeat center center/cover; */
   height: 105vh;
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
 }
-.home-left{
-   background: url(Skil.AIs-Chatbots-Solutions-For-Healthcare-700x700.webp)no-repeat center;
+
+.home-left {
+  background: url(Skil.AIs-Chatbots-Solutions-For-Healthcare-700x700.webp)no-repeat center;
   width: 40vw;
   background-color: #0E94BE;
   text-align: center;
+  background-size: contain;
 
 }
-.home-left h3{
+
+.home-left h3 {
   font-size: 3rem;
   color: white;
 }
-.home-left h1{
+
+.home-left h1 {
   font-size: 4rem;
   color: #0f0654;
 }
-.home-right{
+
+.home-right {
   background-color: white;
   text-align: center;
   display: flex;
   width: 60vw;
   background-color: #cae6ef;
 }
-.content-container{
-    margin-top: 10px;
-  /* display: flex; */
+
+.content-container {
+  margin-top: 10px;
+
   justify-content: center;
-  /* align-items: center; */
+
   width: 60vw;
 }
-.content-container h2{
- font-size: 4rem;
- color: #0f0654;
+
+.content-container h2 {
+  font-size: 4rem;
+  color: #0f0654;
 }
 
 .chatbot-toggler {
   position: fixed;
   bottom: 10px;
-  left:66.8vw;
+  left: 66.8vw;
   outline: none;
   border: none;
   height: 50px;
@@ -64,24 +72,29 @@ body {
   transition: all 0.2s ease;
   padding: 40px;
 }
+
 body.show-chatbot .chatbot-toggler {
   transform: rotate(90deg);
 }
+
 .chatbot-toggler span {
   color: #fff;
   position: absolute;
   font-size: 3rem;
 }
+
 .chatbot-toggler span:last-child,
-body.show-chatbot .chatbot-toggler span:first-child  {
+body.show-chatbot .chatbot-toggler span:first-child {
   opacity: 0;
 }
+
 body.show-chatbot .chatbot-toggler span:last-child {
   opacity: 1;
 }
+
 .chatbot {
   position: fixed;
-  left:58vw;
+  left: 63vw;
   bottom: 90px;
   width: 420px;
   background: #fff;
@@ -91,23 +104,26 @@ body.show-chatbot .chatbot-toggler span:last-child {
   pointer-events: none;
   transform: scale(0.5);
   transform-origin: bottom right;
-  box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
-              0 32px 64px -48px rgba(0,0,0,0.5);
+  box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
+    0 32px 64px -48px rgba(0, 0, 0, 0.5);
   transition: all 0.1s ease;
 }
+
 body.show-chatbot .chatbot {
   opacity: 1;
   pointer-events: auto;
   transform: scale(1);
 }
+
 .chatbot header {
   padding: 16px 0;
   position: relative;
   text-align: center;
   color: #fff;
-  background:#0E94BE;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  background: #0E94BE;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
 .chatbot header span {
   position: absolute;
   right: 15px;
@@ -116,33 +132,41 @@ body.show-chatbot .chatbot {
   cursor: pointer;
   transform: translateY(-50%);
 }
+
 header h2 {
   font-size: 1.4rem;
 }
+
 .chatbot .chatbox {
   overflow-y: auto;
   height: 510px;
   padding: 30px 20px 100px;
 }
+
 .chatbot :where(.chatbox, textarea)::-webkit-scrollbar {
   width: 6px;
 }
+
 .chatbot :where(.chatbox, textarea)::-webkit-scrollbar-track {
   background: #fff;
   border-radius: 25px;
 }
+
 .chatbot :where(.chatbox, textarea)::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 25px;
 }
+
 .chatbox .chat {
   display: flex;
   list-style: none;
 }
+
 .chatbox .outgoing {
   margin: 20px 0;
   justify-content: flex-end;
 }
+
 .chatbox .incoming span {
   width: 32px;
   height: 32px;
@@ -155,6 +179,7 @@ header h2 {
   border-radius: 4px;
   margin: 0 10px 7px 0;
 }
+
 .chatbox .chat p {
   white-space: pre-wrap;
   padding: 12px 16px;
@@ -164,17 +189,21 @@ header h2 {
   font-size: 0.95rem;
   background: #0E94BE;
 }
+
 .chatbox .incoming p {
   border-radius: 10px 10px 10px 0;
 }
+
 .chatbox .chat p.error {
   color: red;
   background: #f8d7da;
 }
+
 .chatbox .incoming p {
   color: #000;
   background: #f2f2f2;
 }
+
 .chatbot .chat-input {
   display: flex;
   gap: 5px;
@@ -185,6 +214,7 @@ header h2 {
   padding: 3px 20px;
   border-top: 1px solid #ddd;
 }
+
 .chat-input textarea {
   height: 55px;
   width: 100%;
@@ -195,6 +225,7 @@ header h2 {
   padding: 15px 15px 15px 0;
   font-size: 0.95rem;
 }
+
 .chat-input span {
   align-self: flex-end;
   color: #3e788d;
@@ -205,33 +236,116 @@ header h2 {
   visibility: hidden;
   font-size: 1.35rem;
 }
-.chat-input textarea:valid ~ span {
+
+.chat-input textarea:valid~span {
   visibility: visible;
 }
 
 @media (max-width: 490px) {
-  body{
-    height:110vh;
+
+  .home-left {
+    width: 100vw;
+    background-size: contain;
   }
-  .chatbot-toggler {
-    right: 20px;
-    bottom: 20px;
+
+  .content-container {
+    display: none;
   }
+
+  .home-right {
+    width: 0%;
+  }
+
   .chatbot {
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    border-radius: 0;
-    width: 100%;
+    position: fixed;
+    left: 20vw;
+    width: 60vw;
+    height: 60vh;
+
   }
-  .chatbot .chatbox {
-    height: 90%;
-    padding: 25px 15px 100px;
+
+  .chatbot-toggler {
+    left: 40vw;
+
   }
-  .chatbot .chat-input {
-    padding: 5px 15px;
+}
+
+@media (max-width:1790px) {
+  .home-left h1 {
+    font-size: 3.5rem;
   }
-  .chatbot header span {
-    display: block;
+
+  .home-left h3 {
+    font-size: 2.5rem;
   }
+}
+
+@media (max-width:710px) {
+
+  .home-left h3 {
+    font-size: 2.2rem;
+  }
+
+  .content-container h2 {
+    font-size: 3.2rem;
+  }
+}
+
+@media (min-width:500px) {
+
+  .chatbot {
+    position: fixed;
+    left: 50vw;
+    bottom: 90px;
+    height: 50vh;
+    width: 45vw;
+    background: #fff;
+    border-radius: 15px;
+    overflow: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transform: scale(0.5);
+    transform-origin: bottom right;
+    box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
+      0 32px 64px -48px rgba(0, 0, 0, 0.5);
+    transition: all 0.1s ease;
+  }
+
+  .chatbot-toggler {
+    position: fixed;
+    bottom: 10px;
+    left: 66.8vw;
+    outline: none;
+    border: none;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background: #0A9EFB;
+    transition: all 0.2s ease;
+    padding: 40px;
+  }
+
+
+}
+
+@media(max-width:375px) {
+  .home-left h1 {
+    font-size: 2.5rem;
+  }
+
+  .home-left h3 {
+    font-size: 1.5rem;
+  }
+
+  .home-right {
+    width: 0%;
+
+  }
+
+
+
 }
